samples/_failures_safe/1761044465_97e817_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27c81edc.c: In function ‘main’:
./samples/SAFE/__tmp_27c81edc.c:157:5: error: expected declaration or statement at end of input
  157 |     } else {
      |     ^
./samples/SAFE/__tmp_27c81edc.c:157:5: error: expected declaration or statement at end of input
